# die-toy

./: CMakeLists.txt  DrawWidget.cpp  DrawWidget.h  FindOpenCV.cmake  MainWindow.cpp  MainWindow.h  README.md
src/: DrawWidget.cpp  DrawWidget.h  MainWindow.cpp  MainWindow.h  main.cpp
